--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -2,7 +2,9 @@
 
 - link:
     # git
-    ~/.gitconfig: git/gitconfig
+    ~/.gitconfig:
+      path: git/gitconfig
+      force: true
 
     # vim
     ~/.SpaceVim.d/init.toml:
@@ -19,7 +21,9 @@
     ~/.p10k.zsh:
       path: zsh/p10k.zsh
       force: true
-    ~/.zshrc: zsh/zshrc
+    ~/.zshrc:
+      path: zsh/zshrc
+      force: true
 
 - shell:
     - chsh -s $(which zsh)
