--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,9 @@
 [submodule "dotbot"]
-	path = dotbot
-	url = https://github.com/anishathalye/dotbot
-	ignore = dirty
+path = dotbot
+url = https://github.com/anishathalye/dotbot
+ignore = dirty
+
+[submodule "oh-my-zsh"]
+path = .oh-my-zsh
+url = https://github.com/ohmyzsh/ohmyzsh
+ignore = dirty
