--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,14 +21,9 @@ set-option -g renumber-windows on
 set -ga terminal-overrides ',*:Tc'
 set -g pane-border-status bottom
 
-# set prefix to ctrl-a
-unbind C-b
-set -g prefix C-a
-bind a send-prefix
-
-set -g @prefix_highlight_fg 'white' # default is 'colour231'
+set -g @prefix_highlight_fg 'black' # default is 'colour231'
 set -g @prefix_highlight_bg 'blue'  # default is 'colour04'
-set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
+set -g status-right '#{prefix_highlight} %a %Y-%m-%d %H:%M'
 
 # display options
 set-option -g status-position top
