--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,8 @@
+# change tmux prefix to ctrl+space
+unbind-key -b
+set-option -g prefix C-Space
+bind-key C-Space send-prefixp
+
 # split panes using | and -
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
