--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,7 @@
 # change tmux prefix to ctrl+space
-unbind-key -b
+unbind-key C-b
 set-option -g prefix C-Space
-bind-key C-Space send-prefixp
+bind-key C-Space send-prefix
 
 # split panes using | and -
 bind | split-window -h -c "#{pane_current_path}"
