--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,38 +1,31 @@
 {
-	"coc.preferences.formatOnSaveFiletypes": [],
-	"eslint.autoFixOnSave": true,
-	"coc.preferences.formatOnType": false,
-	"coc.preferences.formatOnInsertLeave": false,
-	"tsserver.formatOnType": false,
-	"eslint.filetypes": [
-		"javascript",
-		"typescript",
-		"typescriptreact",
-		"javascriptreact"
-	],
-	"eslint.run": "onSave",
-	"git.enableGutters": false,
-	"diagnostic.virtualText": true,
-	"suggest.maxCompleteItemCount": 20,
-	"snippets.ultisnips.directories": [
-		"UltiSnips",
-		"gosnippets/UltiSnips"
-	],
-	"explorer.file.showHiddenFiles": true,
-	"explorer.file.child.template": " [git | 2] [selection | clip | 1] [indent][icon | 1] [diagnosticError & 1][filename omitCenter 1][modified][readonly] [linkIcon & 1][link growRight 1 omitCenter 5]",
-	"coc.preferences.snippets.enable": true,
-	"languageserver": {
-		"golang": {
-			"command": "gopls",
-			"rootPatterns": [
-				"go.mod",
-				".vim/",
-				".git/",
-				".hg/"
-			],
-			"filetypes": [
-				"go"
-			]
-		}
-	}
+  "clangd.path": "/Users/axelyung/.config/coc/extensions/coc-clangd-data/install/12.0.0/clangd_12.0.0/bin/clangd",
+  "coc.preferences.formatOnSaveFiletypes": [],
+  "coc.preferences.formatOnType": false,
+  "diagnostic.virtualText": true,
+  "eslint.autoFixOnSave": true,
+  "eslint.debug": true,
+  "explorer.file.child.template": " [git | 2] [selection | clip | 1] [indent][icon | 1] [diagnosticError & 1][filename omitCenter 1][modified][readonly] [linkIcon & 1][link growRight 1 omitCenter 5]",
+  "explorer.file.showHiddenFiles": true,
+  "git.enableGutters": false,
+  "languageserver": {
+    "golang": {
+      "command": "gopls",
+      "filetypes": [
+        "go"
+      ],
+      "rootPatterns": [
+        "go.mod",
+        ".vim/",
+        ".git/",
+        ".hg/"
+      ]
+    }
+  },
+  "snippets.ultisnips.directories": [
+    "UltiSnips",
+    "gosnippets/UltiSnips"
+  ],
+  "suggest.maxCompleteItemCount": 20,
+  "tsserver.formatOnType": false
 }
