change cpu graph colots

--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -58,7 +58,7 @@ ${color1}$nodename     				${alignr}$kernel
 ${color1}Uptime:${color} $uptime ${color1}    	${alignr}Load:${color} $loadavg
 $hr
 ${alignr}${color1}RAM: $memperc% = $mem / $memmax
-${color #98c379}${cpugraph 60,195 07CC0D FF0000 -t}				${goto 205}${color #98c379}${memgraph 60,195 07CC0D FF0000 -t}
+${color #98c379}${cpugraph 60,195 98c379 e06c75 -t}				${goto 205}${color #98c379}${memgraph 60,195 98c379 e06c75 -t}
 ${color}CPU 1 : ${color1}${cpu cpu1}% ${goto 100}${cpubar cpu1 12,100}  	${goto 205}${color}CPU 5 : ${color1}${cpu cpu5}% ${goto 300}${cpubar cpu5 12,100}
 ${color}CPU 2 : ${color1}${cpu cpu2}% ${goto 100}${cpubar cpu2 12,100}  	${goto 205}${color}CPU 6 : ${color1}${cpu cpu6}% ${goto 300}${cpubar cpu6 12,100}
 ${color}CPU 3 : ${color1}${cpu cpu3}% ${goto 100}${cpubar cpu3 12,100}  	${goto 205}${color}CPU 7 : ${color1}${cpu cpu7}% ${goto 300}${cpubar cpu7 12,100}
