--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -28,18 +28,17 @@ set -g pane-border-status bottom
 
 set -g @prefix_highlight_fg 'black' # default is 'colour231'
 set -g @prefix_highlight_bg 'blue'  # default is 'colour04'
-set -g status-right '#{prefix_highlight} %a %Y-%m-%d %H:%M'
+set -g status-right '#{prefix_highlight}'
 
 # display options
 set-option -g status-position top
 set-option -g status-interval 5
-set-option -g status-bg default
+set-option -g status-bg black
 set-option -g status-fg white
 set-option -g status-left-length 40
-set-option -g status-left "#[fg=brightwhite,bg=brightblack] #S #[fg=default,bg=default] "
+set-option -g status-left "#[fg=brightwhite,bg=brightblack] #S #[fg=default,bg=default]"
 set-option -g window-status-format "#[fg=white,bg=brightblack] #I #[fg=white,bg=black] #W "
-set-option -g window-status-current-format "#[fg=brightwhite,bg=green] #I #[fg=brightwhite,bg=blue] #W "
-set-option -g window-status-separator " "
+set-option -g window-status-current-format "#[fg=black,bg=green] #I #[fg=black,bg=blue] #W "
 set-option -g status-justify left
 set-option -g status-right-length 150
 
