--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -72,7 +72,7 @@ window:
   #
   # Values for `startup_mode` (macOS only):
   #   - SimpleFullscreen
-  startup_mode: Windowed
+  startup_mode: Maximized
 
   # Window title
   #title: Alacritty
@@ -142,7 +142,7 @@ font:
     style: Bold Italic
 
   # Point size
-  size: 13
+  size: 10
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
