git add tpm submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@ ignore = dirty
 path = .oh-my-zsh
 url = https://github.com/ohmyzsh/ohmyzsh
 ignore = dirty
+[submodule "tmux/plugins/tpm"]
+	path = tmux/plugins/tpm
+	url = https://github.com/tmux-plugins/tpm
