--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,10 @@
 
 - clean: ["~"]
 
+- create:
+    - ~/Code
+    - ~/.ssh
+
 - link:
     # git
     ~/.gitconfig: git/gitconfig
@@ -18,6 +22,9 @@
     # tmux
     ~/.tmux.conf:
       path: tmux/tmux.conf
+      force: true
+    ~/.tmux/plugins:
+      path: tmux/plugins
       force: true
     ~/.tmux/plugins:
       path: tmux/plugins
@@ -48,4 +55,9 @@
       force: true
 
 - shell:
-    - [source ~/.zshrc, sourcing .zshrc]
+  - tic -x terminfo/tmux.terminfo
+  - tic -x terminfo/xterm-256color-italic.terminfo
+  - tmux source-file ~/.tmux.conf
+  - ~/.tmux/plugins/tpm/scripts/install_plugins.sh
+  - nvim +PlugUpgrade +PlugInstall +CocInstall +qall
+  - source ~/.zshrc
