remove outdated coc-config items

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,6 +1,5 @@
 {
-  "clangd.path": "/Users/axelyung/.config/coc/extensions/coc-clangd-data/install/12.0.0/clangd_12.0.0/bin/clangd",
-  "coc.preferences.formatOnSave": true,
+  "clangd.path": "~/.config/coc/extensions/coc-clangd-data/install/13.0.0/clangd_13.0.0/bin/clangd",
   "coc.preferences.formatOnType": false,
   "diagnostic.virtualText": true,
   "eslint.autoFixOnSave": true,
@@ -8,7 +7,6 @@
   "eslint.format.enable": true,
   "explorer.file.child.template": " [git | 2] [selection | clip | 1] [indent][icon | 1] [diagnosticError & 1][filename omitCenter 1][modified][readonly] [linkIcon & 1][link growRight 1 omitCenter 5]",
   "explorer.file.showHiddenFiles": true,
-  "git.enableGutters": false,
   "languageserver": {
     "golang": {
       "command": "gopls",
@@ -23,10 +21,6 @@
       ]
     }
   },
-  "snippets.ultisnips.directories": [
-    "UltiSnips",
-    "gosnippets/UltiSnips"
-  ],
   "suggest.maxCompleteItemCount": 20,
   "tsserver.formatOnType": false
 }
