set default terminal to alacritty

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -82,3 +82,5 @@ run '~/.tmux/plugins/tpm/tpm'
 # -----------------------------------------------------------------------
 # user defined overrides
 if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
+
+set -g default-terminal "alacritty"
