--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -3,7 +3,7 @@
   "coc.preferences.formatOnType": false,
   "diagnostic.virtualText": true,
   "eslint.autoFixOnSave": true,
-  "eslint.debug": true,
+  "eslint.debug": false,
   "eslint.format.enable": true,
   "explorer.file.child.template": " [git | 2] [selection | clip | 1] [indent][icon | 1] [diagnosticError & 1][filename omitCenter 1][modified][readonly] [linkIcon & 1][link growRight 1 omitCenter 5]",
   "explorer.file.showHiddenFiles": true,
