--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,9 +1,11 @@
 {
-  "clangd.path": "~/.config/coc/extensions/coc-clangd-data/install/13.0.0/clangd_13.0.0/bin/clangd",
-  "coc.preferences.formatOnType": false,
   "diagnostic.virtualText": true,
+  "json.format.enable": true,
+  "json.enable":true,
   "eslint.autoFixOnSave": true,
   "eslint.debug": false,
+  "eslint.packageManager": "pnpm",
+  "eslint.alwaysShowStatus": true,
   "eslint.format.enable": true,
   "explorer.file.child.template": " [git | 2] [selection | clip | 1] [indent][icon | 1] [diagnosticError & 1][filename omitCenter 1][modified][readonly] [linkIcon & 1][link growRight 1 omitCenter 5]",
   "explorer.file.showHiddenFiles": true,
