--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,6 +1,7 @@
 - defaults:
     link:
       relink: true
+      force: true
     shell:
       stdout: true
       stderr: true
@@ -17,6 +18,7 @@
     ~/.gitconfig:
       if: which git
       path: git/gitconfig
+
     ~/.gitignore_global:
       if: which git
       path: git/gitignore_global
@@ -74,7 +76,7 @@
   - 
     if: which nvim
     description: NeoVim installation
-    command: nvim +PlugUpgrade +PlugInstall +CocInstall +qall
+    command: nvim +PlugUpgrade +PlugInstall +CocUpdate +qall
   - 
     if: which zsh
     description: Refresh zsh
