--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -65,19 +65,19 @@ if -b 'command -v xsel > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xs
 if -b '! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xclip -i -selection clipboard >/dev/null 2>&1"'
 
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @continuum-restore 'on' # continuously save session
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+#set -g @plugin 'tmux-plugins/tpm'
+#set -g @plugin 'tmux-plugins/tmux-yank'
+#set -g @plugin 'tmux-plugins/tmux-open'
+#set -g @plugin 'tmux-plugins/tmux-sensible'
+#set -g @plugin 'tmux-plugins/tmux-continuum'
+#set -g @continuum-restore 'on' # continuously save session
+#set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+#run '~/.tmux/plugins/tpm/tpm'
 
 # -----------------------------------------------------------------------
 # user defined overrides
 if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
 
-set -g default-terminal "alacritty"
+#set -g default-terminal "alacritty"
