--- a/.gitmodules
+++ b/.gitmodules
@@ -4,14 +4,6 @@ url = https://github.com/anishathalye/dotbot
 ignore = dirty
 
 [submodule "oh-my-zsh"]
-path = .oh-my-zsh
+path = zsh/oh-my-zsh
 url = https://github.com/ohmyzsh/ohmyzsh
 ignore = dirty
-
-[submodule "tmux/plugins/tpm"]
-path = tmux/plugins/tpm
-url = https://github.com/tmux-plugins/tpm
-
-[submodule "onedark"]
-path = onedark
-url = https://github.com/joshdick/onedark.vim
