--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,19 @@
 [submodule "dotbot"]
-path = dotbot
-url = https://github.com/anishathalye/dotbot
-ignore = dirty
+	path = dotbot
+	url = https://github.com/anishathalye/dotbot
+	ignore = dirty
 
-[submodule "oh-my-zsh"]
-path = zsh/oh-my-zsh
-url = https://github.com/ohmyzsh/ohmyzsh
-ignore = dirty
+[submodule "zsh/oh-my-zsh"]
+	path = zsh/oh-my-zsh
+	url = https://github.com/ohmyzsh/ohmyzsh
+	ignore = dirty
+
+[submodule "zsh/oh-my-zsh/custom/plugins/zsh-autosuggestions"]
+	path = zsh/oh-my-zsh/custom/plugins/zsh-autosuggestions
+	url = https://github.com/zsh-users/zsh-autosuggestions
+[submodule "zsh/oh-my-zsh/custom/plugins/zsh-syntax-highlighting"]
+	path = zsh/oh-my-zsh/custom/plugins/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting
+[submodule "zsh/oh-my-zsh/custom/plugins/zsh-completions"]
+	path = zsh/oh-my-zsh/custom/plugins/zsh-completions
+	url = https://github.com/zsh-users/zsh-completions
