--- a/.gitmodules
+++ b/.gitmodules
@@ -2,16 +2,7 @@
 	path = dotbot
 	url = https://github.com/anishathalye/dotbot
 	ignore = dirty
-[submodule "zsh/oh-my-zsh"]
-	path = zsh/oh-my-zsh
+[submodule "ohmyzsh"]
+	path = ohmyzsh
 	url = https://github.com/ohmyzsh/ohmyzsh
 	ignore = dirty
-[submodule "zsh/oh-my-zsh/custom/plugins/zsh-autosuggestions"]
-	path = zsh/oh-my-zsh/custom/plugins/zsh-autosuggestions
-	url = https://github.com/zsh-users/zsh-autosuggestions
-[submodule "zsh/oh-my-zsh/custom/plugins/zsh-syntax-highlighting"]
-	path = zsh/oh-my-zsh/custom/plugins/zsh-syntax-highlighting
-	url = https://github.com/zsh-users/zsh-syntax-highlighting
-[submodule "zsh/oh-my-zsh/custom/plugins/zsh-completions"]
-	path = zsh/oh-my-zsh/custom/plugins/zsh-completions
-	url = https://github.com/zsh-users/zsh-completions
