--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,26 @@
-.DS_Store
+*
+
+!alacritty
+!bat
+!dotbot
+!dunst
+!git
+!gtk-3.0
+!lazydocker
+!lazygit
+!neofetch
+!nvim
 nvim/.netrwhist
-tmux/plugins/*
-!tmux/plugins/tpm
+!pgcli
+!regolith
+!scripts
+!starship
+!taskwarrior
+!terminfo
+!tmux
+!zsh
+
+apt_packages
+install
+install.conf.yaml
+README.md
