--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,1 @@
-*
-
-!alacritty
-!bat
-!dotbot
-!dunst
-!git
-!gtk-3.0
-!lazydocker
-!lazygit
-!neofetch
-!nvim
-nvim/.netrwhist
-!pgcli
-!regolith
-!scripts
-!starship
-!taskwarrior
-!terminfo
-!tmux
-!zsh
-
-apt_packages
-install
-install.conf.yaml
-README.md
+taskwarrior/task
