--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -33,7 +33,7 @@ set -g status-right '#{prefix_highlight}'
 # display options
 set-option -g status-position top
 set-option -g status-interval 5
-set-option -g status-bg black
+set-option -g status-bg '#282c34'
 set-option -g status-fg white
 set-option -g status-left-length 40
 set-option -g status-left "#[fg=brightwhite,bg=brightblack] #S #[fg=default,bg=default]"
