--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -10,8 +10,6 @@
 - clean:
     ~/:
       force: true
-    #~/.config:
-      #recursive: true
 - create:
   - ~/Code
   - ~/Applications
@@ -66,22 +64,17 @@
     description: Refresh dunst
     command: killall dunst
   -
-    if: which regolith-look
-    description: Refresh regolith theme
-    command: regolith-look refresh
-  #- tic -x terminfo/tmux.terminfo
-  #- tic -x terminfo/xterm-256color-italic.terminfo
-  -
     if: which tmux && tmux info &> /dev/null
     description: Refresh tmux
-    command: tmux source-file ~/.config/tmux/tmux.conf
-
-  #- ~/.tmux/plugins/tpm/scripts/install_plugins.sh
+    command: |
+      tmux source-file ~/.config/tmux/tmux.conf
+      ~/.config/tmux/plugins/tpm/bin/install_plugins
+      ~/.config/tmux/plugins/tpm/bin/update_plugins all
   -
     if: which nvim
     description: NeoVim installation
     command: nvim +PlugUpgrade +PlugInstall +CocUpdate +CocInstall +qall
-  - 
+  -
     if: which zsh
     description: Refresh zsh
     command: |
@@ -94,9 +87,3 @@
       dunstify -t 3 -u low "low urgency notification"
       dunstify -t 3 -u normal "normal urgency notification"
       dunstify -t 3 -u critical "critical urgency notification"
-  #-
-    #if: which gsettings
-    #description: Refresh GTK theme
-    #command: |
-      #gsettings set org.gnome.desktop.interface gtk-theme "OneDark"
-      #gsettings set org.gnome.desktop.wm.preferences theme "OneDark"
