--- a/.gitmodules
+++ b/.gitmodules
@@ -21,3 +21,6 @@
 [submodule "config/oh-my-zsh"]
 	path = config/oh-my-zsh
 	url = git@github.com:ohmyzsh/ohmyzsh.git
+[submodule "config/tmux/plugins/tpm"]
+	path = config/tmux/plugins/tpm
+	url = https://github.com/tmux-plugins/tpm.git
