--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -9,7 +9,7 @@
 # All imports must either be absolute paths starting with `/`, or paths relative
 # to the user's home directory starting with `~/`.
 #import:
-  #- ~/Code/dotfiles/onedark/term/One Dark.alacritty
+   #- ~/.config/alacritty/nord/src/nord.yml
 
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
@@ -22,7 +22,6 @@
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
   #TERM: alacritty
-
 window:
   # Window dimensions (changes require restart)
   #
@@ -68,7 +67,7 @@ window:
   #
   # Window opacity as a floating point number from `0.0` to `1.0`.
   # The value `0.0` is completely transparent and `1.0` is opaque.
-  opacity: 1.0
+  opacity: 0.95
 
   # Startup Mode (changes require restart)
   #
@@ -158,7 +157,7 @@ font:
     style: Medium Italic
 
   # Point size
-  size: 12.0
+  size: 10.0
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
@@ -185,10 +184,45 @@ font:
 draw_bold_text_with_bright_colors: false
 
 colors:
-  # Default colors
   primary:
-    background: '#282c34'
-    foreground: '#abb2bf'
+    background: '#2e3440'
+    foreground: '#d8dee9'
+    dim_foreground: '#a5abb6'
+  cursor:
+    text: '#2e3440'
+    cursor: '#d8dee9'
+  normal:
+    black: '#3b4252'
+    red: '#bf616a'
+    green: '#a3be8c'
+    yellow: '#ebcb8b'
+    blue: '#81a1c1'
+    magenta: '#b48ead'
+    cyan: '#88c0d0'
+    white: '#e5e9f0'
+  bright:
+    black: '#4c566a'
+    red: '#bf616a'
+    green: '#a3be8c'
+    yellow: '#ebcb8b'
+    blue: '#81a1c1'
+    magenta: '#b48ead'
+    cyan: '#8fbcbb'
+    white: '#eceff4'
+  dim:
+    black: '#373e4d'
+    red: '#94545d'
+    green: '#809575'
+    yellow: '#b29e75'
+    blue: '#68809a'
+    magenta: '#8c738c'
+    cyan: '#6d96a5'
+    white: '#aeb3bb'
+#colors:
+  # Default colors
+  #primary:
+    #background: '#282c34'
+    #foreground: '#abb2bf'
 
     # Bright and dim foreground colors
     #
@@ -205,9 +239,9 @@ colors:
   #
   # Allowed values are CellForeground/CellBackground, which reference the
   # affected cell, or hexadecimal colors like #ff00ff.
-  cursor:
-    text: '#282c34'
-    cursor: '#abb2bf'
+  #cursor:
+    #text: '#282c34'
+    #cursor: '#abb2bf'
 
   # Vi mode cursor colors
   #
@@ -275,26 +309,26 @@ colors:
   #  background: CellForeground
 
   # Normal colors
-  normal:
-    black:   '#5c6370'
-    red:     '#e06c75'
-    green:   '#98c379'
-    yellow:  '#e5c07b'
-    blue:    '#61afef'
-    magenta: '#c678dd'
-    cyan:    '#56b6c2'
-    white:   '#abb2bf'
+  #normal:
+    #black:   '#5c6370'
+    #red:     '#e06c75'
+    #green:   '#98c379'
+    #yellow:  '#e5c07b'
+    #blue:    '#61afef'
+    #magenta: '#c678dd'
+    #cyan:    '#56b6c2'
+    #white:   '#abb2bf'
 
-  # Bright colors
-  bright:
-    black:   '#4b5263'
-    red:     '#be5046'
-    green:   '#98c379'
-    yellow:  '#d19a66'
-    blue:    '#61afef'
-    magenta: '#c678dd'
-    cyan:    '#56b6c2'
-    white:   '#abb2bf'
+  ## Bright colors
+  #bright:
+    #black:   '#4b5263'
+    #red:     '#be5046'
+    #green:   '#98c379'
+    #yellow:  '#d19a66'
+    #blue:    '#61afef'
+    #magenta: '#c678dd'
+    #cyan:    '#56b6c2'
+    #white:   '#abb2bf'
 
 # Colors (Tomorrow Night)
 #colors:
